# datafun-07-applied

./: README.md  pyproject.toml
notebooks/: dsmorgan_eda.ipynb
